Fix image filename in construction-gaming-simulator.html

--- a/construction-gaming-simulator.html
+++ b/construction-gaming-simulator.html
@@ -72,7 +72,7 @@
     <h2>Career Role</h2>
     <p>As a civil engineer working on a construction simulation game, I would collaborate with developers to ensure realistic structural design and accurate physical behaviors of materials. My expertise would help make the game both educational and engaging for players interested in civil engineering.</p>
 
-    <img src="CONSTRUCTION.jpeg">
+    <img src="construction.jpeg">
 
     <h2>Ethical Issue</h2>
     <p>An ethical issue could arise if the simulation misrepresents engineering safety standards, leading players to believe unsafe construction methods are acceptable. Accuracy and responsibility in the design process are essential to maintain public trust and professional integrity.</p>
