Replace Cybersecurity link with Construction Gaming Simulator

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <h1>My Personal Values</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="cybersecurity.html">Cybersecurity</a>
+      <a href="construction-gaming-simulator.html">Construction Gaming Simulator</a>
     </nav>
   </header>
 
